--- a/product-composite-service.properties
+++ b/product-composite-service.properties
@@ -6,3 +6,7 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 resilience4j.circuitbreaker.instances.productComposite.sliding-window-size=10
 resilience4j.circuitbreaker.instances.productComposite.failure-rate-threshold=50
 resilience4j.circuitbreaker.instances.productComposite.wait-duration-in-open-state=10000
+
+management.tracing.enabled=true
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://localhost:9411/
