--- a/product-service.properties
+++ b/product-service.properties
@@ -11,3 +11,7 @@ spring.jpa.show-sql=true
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+management.tracing.enabled=true
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://localhost:9411/
