--- a/product-composite-service.properties
+++ b/product-composite-service.properties
@@ -10,3 +10,7 @@ resilience4j.circuitbreaker.instances.productComposite.wait-duration-in-open-sta
 management.tracing.enabled=true
 management.tracing.sampling.probability=1.0
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+
+management.endpoints.web.exposure.include=health,metrics
+management.endpoint.metrics.enabled=true
+management.metrics.enable.all=true
