Update management properties for metrics and health

--- a/product-composite-service-prod.properties
+++ b/product-composite-service-prod.properties
@@ -12,5 +12,6 @@ management.tracing.enabled=true
 management.tracing.sampling.probability=1.0
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=health,metrics
+management.endpoint.metrics.enabled=true
+management.metrics.enable.all=true
