--- a/product-composite-service.properties
+++ b/product-composite-service.properties
@@ -6,6 +6,12 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 resilience4j.circuitbreaker.instances.productComposite.sliding-window-size=10
 resilience4j.circuitbreaker.instances.productComposite.failure-rate-threshold=50
 resilience4j.circuitbreaker.instances.productComposite.wait-duration-in-open-state=10000
+resilience4j.circuitbreaker.instances.productComposite.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.productComposite.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.productComposite.permitted-number-of-calls-in-half-open-state=3
+
+# CRITIQUE : Enregistrer les exceptions qui déclenchent le fallback
+resilience4j.circuitbreaker.instances.productComposite.record-exceptions=java.lang.RuntimeException,feign.FeignException
 
 management.tracing.enabled=true
 management.tracing.sampling.probability=1.0
